[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
libsql-client = { version = "0.26.2", default-features = false, features = ["workers_backend"] }
sea-query = "0.28.5"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
